--- a/commercial.html
+++ b/commercial.html
@@ -71,7 +71,7 @@
         <!-- (Commercial) -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg"
-          class="project-box com"
+          class="project-box com" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg"
@@ -82,7 +82,7 @@
         <!-- (Commercial) -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/GUEST HOUSE AT RAMGRAM - 2.jpg"
-          class="project-box com"
+          class="project-box com" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/GUEST HOUSE AT RAMGRAM - 2.jpg"
@@ -93,7 +93,7 @@
         <!-- (Commercial) -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/GUEST HOUSE AT RAMGRAM.jpg"
-          class="project-box com"
+          class="project-box com" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/GUEST HOUSE AT RAMGRAM.jpg"
@@ -104,7 +104,7 @@
         <!-- (Commercial) -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/HOUSING AT BHAIRAHAWA.jpg"
-          class="project-box com"
+          class="project-box com" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/HOUSING AT BHAIRAHAWA.jpg"
@@ -115,7 +115,7 @@
         <!-- (Commercial) -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/OFFICE AT KAPILVASTU.jpg"
-          class="project-box com"
+          class="project-box com" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/OFFICE AT KAPILVASTU.jpg"
@@ -126,7 +126,7 @@
         <!-- (Commercial) -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/SHOWROOM AT BUTWAL.jpg"
-          class="project-box com"
+          class="project-box com" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/SHOWROOM AT BUTWAL.jpg"
@@ -137,7 +137,7 @@
         <!-- (Commercial) -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/STADIUM AT SUDDHODHAN RURAL MUNICIPALITY.jpg"
-          class="project-box com"
+          class="project-box com" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/STADIUM AT SUDDHODHAN RURAL MUNICIPALITY.jpg"
