--- a/hospital.html
+++ b/hospital.html
@@ -73,7 +73,7 @@
         <!-- Hospital  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/HOSPITAL/100 BEDDED HOSPITAL AT BUTWAL - 2.jpg"
-          class="project-box hos"
+          class="project-box hos" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/HOSPITAL/100 BEDDED HOSPITAL AT BUTWAL - 2.jpg"
@@ -84,7 +84,7 @@
         <!-- Hospital  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/HOSPITAL/100 BEDDED HOSPITAL AT BUTWAL.jpg"
-          class="project-box hos"
+          class="project-box hos" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/HOSPITAL/100 BEDDED HOSPITAL AT BUTWAL.jpg"
@@ -95,7 +95,7 @@
         <!-- Hospital  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/HOSPITAL/15 BEDDED PRIMARY HOSPITAL AT SUDDHODHAN RURAL MUNICIPALITY - 2.jpg"
-          class="project-box hos"
+          class="project-box hos" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/HOSPITAL/15 BEDDED PRIMARY HOSPITAL AT SUDDHODHAN RURAL MUNICIPALITY - 2.jpg"
@@ -106,7 +106,7 @@
         <!-- Hospital  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/HOSPITAL/15 BEDDED PRIMARY HOSPITAL AT SUDDHODHAN RURAL MUNICIPALITY.jpg"
-          class="project-box hos"
+          class="project-box hos" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/HOSPITAL/15 BEDDED PRIMARY HOSPITAL AT SUDDHODHAN RURAL MUNICIPALITY.jpg"
