--- a/industrial.html
+++ b/industrial.html
@@ -72,7 +72,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/ARGAKHANCHI CEMENT (P) LTD. AT SIDDHARTHANAGAR.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/ARGAKHANCHI CEMENT (P) LTD. AT SIDDHARTHANAGAR.png"
@@ -83,7 +83,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/ASIAN CONCRETO (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/ASIAN CONCRETO (P) LTD. AT RUPANDEHI.png"
@@ -94,7 +94,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/BALAJI CEMENT (P) LTD. AT KAPILVASTU.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/BALAJI CEMENT (P) LTD. AT KAPILVASTU.png"
@@ -105,7 +105,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/BRIJ CEMENT INDUSTRIES (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/BRIJ CEMENT INDUSTRIES (P) LTD. AT RUPANDEHI.png"
@@ -116,7 +116,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/BRIJ GLASS INDUSTRIES (P) LTD. AT PARASI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/BRIJ GLASS INDUSTRIES (P) LTD. AT PARASI.png"
@@ -127,7 +127,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/ENVI-POWER ENERGY AND FERTILIZER (P) LTD. AT PARASI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/ENVI-POWER ENERGY AND FERTILIZER (P) LTD. AT PARASI.png"
@@ -138,7 +138,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/GANPATI CEMENT (P) LTD. AT KAPILVASTU.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/GANPATI CEMENT (P) LTD. AT KAPILVASTU.png"
@@ -149,7 +149,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/GOLDSTAR SHOES AT HAKUI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/GOLDSTAR SHOES AT HAKUI.png"
@@ -160,7 +160,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/GOYAL METAL INDUSTRIES (P) LTD. AT RAMGRAM.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/GOYAL METAL INDUSTRIES (P) LTD. AT RAMGRAM.png"
@@ -171,7 +171,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/HIMGIRI MAIDA MILL (P) LTD. AT ROHINI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/HIMGIRI MAIDA MILL (P) LTD. AT ROHINI.png"
@@ -182,7 +182,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/HONDA WAREHOUSE AT DHAKDAI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/HONDA WAREHOUSE AT DHAKDAI.png"
@@ -193,7 +193,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/JAGADAMBA CEMENT INDUSTRIES (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/JAGADAMBA CEMENT INDUSTRIES (P) LTD. AT RUPANDEHI.png"
@@ -204,7 +204,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/JAGADAMBA FOODS (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/JAGADAMBA FOODS (P) LTD. AT RUPANDEHI.png"
@@ -215,7 +215,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/JAGDAMBA SYNTHETICS (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/JAGDAMBA SYNTHETICS (P) LTD. AT RUPANDEHI.png"
@@ -226,7 +226,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/JAI HARI AGRO (P) LTD. AT ROHINI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/JAI HARI AGRO (P) LTD. AT ROHINI.png"
@@ -237,7 +237,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/LUMBINI FLOUR MILLS (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/LUMBINI FLOUR MILLS (P) LTD. AT RUPANDEHI.png"
@@ -248,7 +248,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/MAHALAKSHMI MULTI - AGRO INDUSTRIES (P) LTD. AT KAPILVASTU.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/MAHALAKSHMI MULTI - AGRO INDUSTRIES (P) LTD. AT KAPILVASTU.png"
@@ -259,7 +259,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/MANGALAM INDUSTRIES (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/MANGALAM INDUSTRIES (P) LTD. AT RUPANDEHI.png"
@@ -270,7 +270,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/RELIANCE CEMENT (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/RELIANCE CEMENT (P) LTD. AT RUPANDEHI.png"
@@ -281,7 +281,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/SARBOTTAM CEMENT (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/SARBOTTAM CEMENT (P) LTD. AT RUPANDEHI.png"
@@ -292,7 +292,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/SAROVAR AGRO INDUSTRIES (P) LTD. AT OM SATIYA.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/SAROVAR AGRO INDUSTRIES (P) LTD. AT OM SATIYA.png"
@@ -303,7 +303,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/SHREE STEELS (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/SHREE STEELS (P) LTD. AT RUPANDEHI.png"
@@ -314,7 +314,7 @@
         <!-- Industrial  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/SIDDHARTHA OIL INDUSTRIES (P) LTD. AT RUPANDEHI.png"
-          class="project-box ind"
+          class="project-box ind" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INDUSTRIAL/SIDDHARTHA OIL INDUSTRIES (P) LTD. AT RUPANDEHI.png"
