--- a/interior.html
+++ b/interior.html
@@ -72,7 +72,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/CLINIC AT BHAIRAHAWA.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/CLINIC AT BHAIRAHAWA.jpg"
@@ -83,7 +83,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/GUEST HOUSE BLOCK AT RAMGRAM.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/GUEST HOUSE BLOCK AT RAMGRAM.jpg"
@@ -94,7 +94,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE AT RAMGRAM - 2.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE AT RAMGRAM - 2.jpg"
@@ -105,7 +105,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE AT RAMGRAM.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE AT RAMGRAM.jpg"
@@ -116,7 +116,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE CABIN AT PALPA.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE CABIN AT PALPA.jpg"
@@ -127,7 +127,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE INTERIOR AT BUTWAL - 2.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE INTERIOR AT BUTWAL - 2.jpg"
@@ -138,7 +138,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE INTERIOR AT BUTWAL.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE INTERIOR AT BUTWAL.jpg"
@@ -149,7 +149,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE INTERIOR AT TAMNAGAR.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/OFFICE INTERIOR AT TAMNAGAR.jpg"
@@ -160,7 +160,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT BHAIRAHAWA - 2.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT BHAIRAHAWA - 2.jpg"
@@ -171,7 +171,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT BHAIRAHAWA - 3.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT BHAIRAHAWA - 3.jpg"
@@ -182,7 +182,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT BHAIRAHAWA.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT BHAIRAHAWA.jpg"
@@ -193,7 +193,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT JEEPUR.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT JEEPUR.jpg"
@@ -204,7 +204,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT JEETPUR - 2.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT JEETPUR - 2.jpg"
@@ -215,7 +215,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT PADSARI - 2.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT PADSARI - 2.jpg"
@@ -226,7 +226,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT PADSARI - 3.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT PADSARI - 3.jpg"
@@ -237,7 +237,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT PADSARI.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT PADSARI.jpg"
@@ -248,7 +248,7 @@
         <!-- Interior  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT PATTHARDADA.jpg"
-          class="project-box int"
+          class="project-box int" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/INTERIOR/RESIDENCE AT PATTHARDADA.jpg"
