--- a/religious.html
+++ b/religious.html
@@ -73,7 +73,7 @@
         <!-- religious  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/HANUMAN MANDIR AT DHAKDAI.jpg"
-          class="project-box reg"
+          class="project-box reg" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/HANUMAN MANDIR AT DHAKDAI.jpg"
@@ -84,7 +84,7 @@
         <!-- religious  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/JAMA MASJID AHLE HADEES AT BETHARI.jpg"
-          class="project-box reg"
+          class="project-box reg" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/JAMA MASJID AHLE HADEES AT BETHARI.jpg"
@@ -95,7 +95,7 @@
         <!-- religious  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/RADHA KRISHNA MANDIR AT BHAIRAHAWA.jpg"
-          class="project-box reg"
+          class="project-box reg" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/RADHA KRISHNA MANDIR AT BHAIRAHAWA.jpg"
@@ -106,7 +106,7 @@
         <!-- religious  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/RAM JANAKI MANDIR AT RAMGRAM.jpg"
-          class="project-box reg"
+          class="project-box reg" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/RAM JANAKI MANDIR AT RAMGRAM.jpg"
@@ -117,7 +117,7 @@
         <!-- religious  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/SHRI RAM JANAKI HANUMAN MANDIR - 2.jpg"
-          class="project-box reg"
+          class="project-box reg" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/SHRI RAM JANAKI HANUMAN MANDIR - 2.jpg"
@@ -128,7 +128,7 @@
         <!-- religious  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/SHRI RAM JANAKI HANUMAN MANDIR - 3.jpg"
-          class="project-box reg"
+          class="project-box reg" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/SHRI RAM JANAKI HANUMAN MANDIR - 3.jpg"
@@ -139,7 +139,7 @@
         <!-- religious  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/SHRI RAM JANAKI HANUMAN MANDIR.jpg"
-          class="project-box reg"
+          class="project-box reg" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/SHRI RAM JANAKI HANUMAN MANDIR.jpg"
@@ -150,7 +150,7 @@
         <!-- religious  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/TEMPLE AT SEMRAHAWA.jpg"
-          class="project-box reg"
+          class="project-box reg" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RELIGIOUS/TEMPLE AT SEMRAHAWA.jpg"
