--- a/residential.html
+++ b/residential.html
@@ -74,7 +74,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 1.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 1.jpg"
@@ -85,7 +85,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 10.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 10.jpg"
@@ -96,7 +96,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 11.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 11.jpg"
@@ -107,7 +107,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 12.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 12.jpg"
@@ -118,7 +118,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 2.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 2.jpg"
@@ -129,7 +129,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 3.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 3.jpg"
@@ -140,7 +140,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 4.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 4.jpg"
@@ -151,7 +151,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 5.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 5.jpg"
@@ -162,7 +162,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 6.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 6.jpg"
@@ -173,7 +173,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 7.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 7.jpg"
@@ -184,7 +184,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 8.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 8.jpg"
@@ -195,7 +195,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 9.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BHAIRAHAWA - 9.jpg"
@@ -206,7 +206,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BIRGUNJ.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BIRGUNJ.jpg"
@@ -217,7 +217,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BUTWAL.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT BUTWAL.jpg"
@@ -228,7 +228,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT CHAPIYA.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT CHAPIYA.jpg"
@@ -239,7 +239,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT DEVDAH.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT DEVDAH.jpg"
@@ -250,7 +250,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT LALITPUR.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT LALITPUR.jpg"
@@ -261,7 +261,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PADSARI - 2.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PADSARI - 2.jpg"
@@ -272,8 +272,8 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PADSARI - 3.jpg"
-          class="project-box res"
-        >
+          class="project-box res" target="_blank"
+        > 
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PADSARI - 3.jpg"
             alt="RESIDENCE AT BHAIRAHAWA - 1.jpg"
@@ -283,7 +283,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PADSARI.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PADSARI.jpg"
@@ -294,7 +294,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PARASI - 2.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PARASI - 2.jpg"
@@ -305,7 +305,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PARASI - 3.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PARASI - 3.jpg"
@@ -316,7 +316,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PATTHARDADA.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT PATTHARDADA.jpg"
@@ -327,7 +327,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT SONAULI.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT SONAULI.jpg"
@@ -338,7 +338,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT TAULIHAWA - 2.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT TAULIHAWA - 2.jpg"
@@ -349,7 +349,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT TAULIHAWA - 3.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT TAULIHAWA - 3.jpg"
@@ -360,7 +360,7 @@
         <!-- residential  -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT TAULIHAWA.jpg"
-          class="project-box res"
+          class="project-box res" target="_blank"
         >
           <img
             src="WEBSITE_CONTENT/PROJECTS/RESIDENTIAL/RESIDENCE AT TAULIHAWA.jpg"
