video reduced 5 to 3

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         muted
         loop
       ></video>
-      <video
+      <!-- <video
         class="video-slide"
         src="WEBSITE_CONTENT/FRONT_PAGE/video/3.mp4"
         autoplay
@@ -59,7 +59,7 @@
         autoplay
         muted
         loop
-      ></video>
+      ></video> -->
       <video
         class="video-slide"
         src="WEBSITE_CONTENT/FRONT_PAGE/video/5.mp4"
@@ -91,28 +91,28 @@
         </p> -->
         <a href="contact.html">Contact Now</a>
       </div>
-      <div class="content">
+      <!-- <div class="content">
         <h1>Residence <br /><span>Villa</span></h1>
-        <!-- <p>
+        <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
           dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Dolorem repudiandae eos eveniet ad
           accusantium, soluta ea minima dicta vero temporibus laborum quam iste
           eligendi cupiditate, optio quibusdam nesciunt necessitatibus sed.
-        </p> -->
+        </p>
         <a href="contact.html">Contact Now</a>
       </div>
       <div class="content">
         <h1>Office <br /><span>Interior </span></h1>
-        <!-- <p>
+        <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
           dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Dolorem repudiandae eos eveniet ad
           accusantium, soluta ea minima dicta vero temporibus laborum quam iste
           eligendi cupiditate, optio quibusdam nesciunt necessitatibus sed.
-        </p> -->
+        </p>
         <a href="contact.html">Contact Now</a>
-      </div>
+      </div> -->
       <div class="content">
         <h1>Residence <br /><span>Villa</span></h1>
         <!-- <p>
@@ -143,8 +143,8 @@
       <div class="slider-navigation">
         <div class="nav-btn active"></div>
         <div class="nav-btn"></div>
-        <div class="nav-btn"></div>
-        <div class="nav-btn"></div>
+        <!-- <div class="nav-btn"></div>
+        <div class="nav-btn"></div> -->
         <div class="nav-btn"></div>
       </div>
     </section>
