--- a/contact.html
+++ b/contact.html
@@ -238,8 +238,8 @@
 
         <p class="developer">
           Developed by:
-          <a href="https://siddharthapathak.com.np/" target="_blank"
-            >Siddhartha Pathak</a
+          <a href="#" target="_blank"
+            >Aniket Shah</a
           >
         </p>
       </div>
