--- a/interior.html
+++ b/interior.html
@@ -357,8 +357,9 @@
 
         <p class="developer">
           Developed by:
-          <a href="https://siddharthapathak.com.np/" target="_blank"
-            >Siddhartha Pathak</a
+          <!-- https://siddharthapathak.com.np/ -->
+          <a href="#" target="_blank"
+            >Aniket Shah</a
           >
         </p>
       </div>
