--- a/residential.html
+++ b/residential.html
@@ -471,7 +471,7 @@
         <p class="developer">
           Developed by:
           <!-- https://siddharthapathak.com.np/ -->
-          <a href="#" target="_blank"
+          <a href="https://www.linkedin.com/in/aniket-sah" target="_blank"
             >Aniket Shah</a
           >
         </p>
