--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@
 
         <p class="developer">
           Developed by:
-          <a href="#" target="_blank"
+          <a href="https://www.linkedin.com/in/aniket-sah" target="_blank"
             >Aniket Shah</a
           >
         </p>
