--- a/services.html
+++ b/services.html
@@ -237,7 +237,7 @@
         <p class="developer">
           Developed by:
           <!-- https://siddharthapathak.com.np/ -->
-          <a href="#" target="_blank"
+          <a href="https://www.linkedin.com/in/aniket-sah" target="_blank"
             >Aniket Shah</a
           >
         </p>
