--- a/about.html
+++ b/about.html
@@ -239,12 +239,12 @@
           ></a>
         </div>
 
-        <p class="developer">
+        <!-- <p class="developer">
           Developed by:
           <a href="https://www.linkedin.com/in/aniket-sah" target="_blank"
             >Aniket Shah</a
           >
-        </p>
+        </p> -->
       </div>
     </footer>
 
