--- a/religious.html
+++ b/religious.html
@@ -258,13 +258,13 @@
           ></a>
         </div>
 
-        <p class="developer">
+        <!-- <p class="developer">
           Developed by:
-          <!-- https://siddharthapathak.com.np/ -->
+          https://siddharthapathak.com.np/
           <a href="https://www.linkedin.com/in/aniket-sah" target="_blank"
             >Aniket Shah</a
           >
-        </p>
+        </p> -->
       </div>
     </footer>
 
