--- a/services.html
+++ b/services.html
@@ -234,13 +234,13 @@
           ></a>
         </div>
 
-        <p class="developer">
+        <!-- <p class="developer">
           Developed by:
-          <!-- https://siddharthapathak.com.np/ -->
-          <a href="https://www.linkedin.com/in/aniket-sah" target="_blank"
-            >Aniket Shah</a
+          
+          <a href="https://siddharthapathak.com.np/" target="_blank"
+            >Siddhartha Pathak</a
           >
-        </p>
+        </p> -->
       </div>
     </footer>
 
